--- a/po/de.po
+++ b/po/de.po
@@ -7,10 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gelemental\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-09-27 14:49-0700\n"
+"POT-Creation-Date: 2013-08-06 12:46+0200\n"
 "PO-Revision-Date: 2007-02-16 18:00+0000\n"
 "Last-Translator: Marion Petersen <marion-petersen@gmx.de>\n"
 "Language-Team: NAME <EMAIL@ADDRESS>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -2588,19 +2589,17 @@ msgstr ""
 "Strahlen entdeckte."
 
 #: ../libelemental/data.cc:163
-msgid "Ununbium"
-msgstr "Ununbium"
+msgid "Copernicium"
+msgstr ""
 
 #: ../libelemental/data.cc:163
 msgid "Inst. for Heavy Ion Research"
 msgstr "Gesellschaft für Schwerionenforschung"
 
-#: ../libelemental/data.cc:163 ../libelemental/data.cc:164
-#: ../libelemental/data.cc:165 ../libelemental/data.cc:166
-#: ../libelemental/data.cc:167 ../libelemental/data.cc:168
-#: ../libelemental/data.cc:169
-msgid "IUPAC systematic name"
-msgstr "Name nach IUPAC-Nomenklatur"
+#: ../libelemental/data.cc:163
+#, fuzzy
+msgid "Named in honor of the astronomer Nicolaus Copernicus."
+msgstr "Benannt zu Ehren des italienischen Physikers Enrico Fermi."
 
 #: ../libelemental/data.cc:164
 msgid "Ununtrium"
@@ -2616,17 +2615,36 @@ msgstr "Russland/Vereinigte Staaten von Amerika"
 msgid "Joint Inst. for Nuclear Research / Lawrence Livermore Lab."
 msgstr "Kernforschungszentrum bei Dubna / Lawrence Livermore Lab."
 
+#: ../libelemental/data.cc:164 ../libelemental/data.cc:166
+#: ../libelemental/data.cc:168 ../libelemental/data.cc:169
+msgid "IUPAC systematic name"
+msgstr "Name nach IUPAC-Nomenklatur"
+
 #: ../libelemental/data.cc:165
-msgid "Ununquadium"
-msgstr "Ununquadium"
+#, fuzzy
+msgid "Flerovium"
+msgstr "Mendelevium"
+
+#: ../libelemental/data.cc:165
+msgid ""
+"Named after the Flerov Laboratory of Nuclear Reactions of the Joint Inst. "
+"for Nuclear Research in Dubna, Russia, where it was discovered."
+msgstr ""
 
 #: ../libelemental/data.cc:166
 msgid "Ununpentium"
 msgstr "Ununpentium"
 
 #: ../libelemental/data.cc:167
-msgid "Ununhexium"
-msgstr "Ununhexium"
+msgid "Livermorium"
+msgstr ""
+
+#: ../libelemental/data.cc:167
+msgid ""
+"The name recognizes the Lawrence Livermore National Laboratory, California, "
+"which collaborated with the Joint Inst. for Nuclear Research (JINR), Russia "
+"on the discovery."
+msgstr ""
 
 #: ../libelemental/data.cc:168
 msgid "Ununseptium"
@@ -2635,3 +2653,9 @@ msgstr "Ununseptium"
 #: ../libelemental/data.cc:169
 msgid "Ununoctium"
 msgstr "Ununoctium"
+
+#~ msgid "Ununhexium"
+#~ msgstr "Ununhexium"
+
+#~ msgid "Ununquadium"
+#~ msgstr "Ununquadium"
