--- a/po/tr.po
+++ b/po/tr.po
@@ -7,10 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gelemental\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-09-27 14:49-0700\n"
+"POT-Creation-Date: 2013-08-06 12:46+0200\n"
 "PO-Revision-Date: 2003-10-28 23:29+0200\n"
 "Last-Translator: Osman Köşeli <ansione@hotmail.com>\n"
 "Language-Team:  NAME <EMAIL@ADDRESS>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -824,8 +825,8 @@ msgstr ""
 #: ../src/main.cc:112
 msgid "Run '%1 --help' to see a full list of available command line options."
 msgstr ""
-"Mevcut olan komut satırı seçeneklerinin tam listesini görmek istiyor sanız '%"
-"1 --help'i çalıştırın."
+"Mevcut olan komut satırı seçeneklerinin tam listesini görmek istiyor sanız "
+"'%1 --help'i çalıştırın."
 
 #: ../src/main.cc:119
 msgid "An unknown error occurred."
@@ -2516,19 +2517,17 @@ msgid ""
 msgstr ""
 
 #: ../libelemental/data.cc:163
-msgid "Ununbium"
-msgstr "Ununbiyum"
+msgid "Copernicium"
+msgstr ""
 
 #: ../libelemental/data.cc:163
 msgid "Inst. for Heavy Ion Research"
 msgstr ""
 
-#: ../libelemental/data.cc:163 ../libelemental/data.cc:164
-#: ../libelemental/data.cc:165 ../libelemental/data.cc:166
-#: ../libelemental/data.cc:167 ../libelemental/data.cc:168
-#: ../libelemental/data.cc:169
-msgid "IUPAC systematic name"
-msgstr ""
+#: ../libelemental/data.cc:163
+#, fuzzy
+msgid "Named in honor of the astronomer Nicolaus Copernicus."
+msgstr "Bilim adamı Enrico Fermi şerefine adlandırıldı."
 
 #: ../libelemental/data.cc:164
 msgid "Ununtrium"
@@ -2544,17 +2543,36 @@ msgstr "Rusya/Birleşmiş Devletler"
 msgid "Joint Inst. for Nuclear Research / Lawrence Livermore Lab."
 msgstr ""
 
+#: ../libelemental/data.cc:164 ../libelemental/data.cc:166
+#: ../libelemental/data.cc:168 ../libelemental/data.cc:169
+msgid "IUPAC systematic name"
+msgstr ""
+
 #: ../libelemental/data.cc:165
-msgid "Ununquadium"
-msgstr "Ununkuadyum"
+#, fuzzy
+msgid "Flerovium"
+msgstr "Mendelevyum"
+
+#: ../libelemental/data.cc:165
+msgid ""
+"Named after the Flerov Laboratory of Nuclear Reactions of the Joint Inst. "
+"for Nuclear Research in Dubna, Russia, where it was discovered."
+msgstr ""
 
 #: ../libelemental/data.cc:166
 msgid "Ununpentium"
 msgstr "Ununpentiyum"
 
 #: ../libelemental/data.cc:167
-msgid "Ununhexium"
-msgstr "Ununhexiyum"
+msgid "Livermorium"
+msgstr ""
+
+#: ../libelemental/data.cc:167
+msgid ""
+"The name recognizes the Lawrence Livermore National Laboratory, California, "
+"which collaborated with the Joint Inst. for Nuclear Research (JINR), Russia "
+"on the discovery."
+msgstr ""
 
 #: ../libelemental/data.cc:168
 msgid "Ununseptium"
@@ -2563,3 +2581,9 @@ msgstr "Ununseptiyum"
 #: ../libelemental/data.cc:169
 msgid "Ununoctium"
 msgstr "Ununoktiyum"
+
+#~ msgid "Ununhexium"
+#~ msgstr "Ununhexiyum"
+
+#~ msgid "Ununquadium"
+#~ msgstr "Ununkuadyum"
