Update new IUPAC names for elements 113, 115, 117 and 118 Announced 30 November 2016 https://iupac.org/iupac-announces-the-names-of-the-elements-113-115-117-and-118/

--- a/po/de.po
+++ b/po/de.po
@@ -2602,8 +2602,8 @@ msgid "Named in honor of the astronomer Nicolaus Copernicus."
 msgstr "Benannt zu Ehren des italienischen Physikers Enrico Fermi."
 
 #: ../libelemental/data.cc:164
-msgid "Ununtrium"
-msgstr "Ununtrium"
+msgid "Nihonium"
+msgstr "Nihonium"
 
 #: ../libelemental/data.cc:164 ../libelemental/data.cc:166
 #: ../libelemental/data.cc:169
@@ -2632,8 +2632,8 @@ msgid ""
 msgstr ""
 
 #: ../libelemental/data.cc:166
-msgid "Ununpentium"
-msgstr "Ununpentium"
+msgid "Moscovium"
+msgstr "Moscovium"
 
 #: ../libelemental/data.cc:167
 msgid "Livermorium"
@@ -2647,12 +2647,12 @@ msgid ""
 msgstr ""
 
 #: ../libelemental/data.cc:168
-msgid "Ununseptium"
-msgstr "Ununseptium"
+msgid "Tennessine"
+msgstr "Tennessine"
 
 #: ../libelemental/data.cc:169
-msgid "Ununoctium"
-msgstr "Ununoctium"
+msgid "Oganesson"
+msgstr "Oganesson"
 
 #~ msgid "Ununhexium"
 #~ msgstr "Ununhexium"
