--- a/po/ru.po
+++ b/po/ru.po
@@ -2493,8 +2493,8 @@ msgid "Named in honor of the astronomer Nicolaus Copernicus."
 msgstr ""
 
 #: ../libelemental/data.cc:164
-msgid "Ununtrium"
-msgstr "Унунтрий"
+msgid "Nihonium"
+msgstr "Nihonium"
 
 #: ../libelemental/data.cc:164 ../libelemental/data.cc:166
 #: ../libelemental/data.cc:169
@@ -2523,8 +2523,8 @@ msgid ""
 msgstr ""
 
 #: ../libelemental/data.cc:166
-msgid "Ununpentium"
-msgstr "Унунпентий"
+msgid "Moscovium"
+msgstr "Moscovium"
 
 #: ../libelemental/data.cc:167
 msgid "Livermorium"
@@ -2538,12 +2538,12 @@ msgid ""
 msgstr ""
 
 #: ../libelemental/data.cc:168
-msgid "Ununseptium"
-msgstr "Унунсептий"
+msgid "Tennessine"
+msgstr "Tennessine"
 
 #: ../libelemental/data.cc:169
-msgid "Ununoctium"
-msgstr "Унуноктий"
+msgid "Oganesson"
+msgstr "Oganesson"
 
 #~ msgid "Ununhexium"
 #~ msgstr "Унунгексий"
