Update maintainer, contributors, translators and URLs

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
-The current maintainer is Kevin Daughtridge <kevin@kdau.com>.
+The current maintainer is Graham Inggs <ginggs@riseup.net>.
+The previous maintainer was Kevin Daughtridge <kevin@kdau.com>.
 
 GPeriodic was maintained by Jonas Frantz <jonas.frantz@welho.com> and
 Kyle R. Burton <mortis@voicenet.com>.
@@ -15,6 +16,9 @@ Piotr Najman <picio@bogucice.pl>
 Felix Natter <f.natter@ndh.net>
 Ambrogio Oliva <ambrogio.oliva@ctimilano.com>
 Arno W. Peters <a.w.peters@ieee.org>
+Daniel Leidert <dleidert@debian.org>
+Cesare Tirabassi <norsetto@ubuntu.com>
+Joachim Reichel <reichel@debian.org>
 
 The Blue Obelisk Data Repository was developed by:
 Geoff Hutchinson
