--- a/docs/gelemental.1
+++ b/docs/gelemental.1
@@ -31,4 +31,4 @@ Multiple instances of --print and/or --show may be given.
 .PP
 This program also acceps all standard GTK+ options, which follow the usual GNU command line syntax.
 .SH SEE ALSO
-gElemental website <http://www.kdau.com/projects/gelemental/>.
+gElemental website <https://github.com/ginggs/gelemental>.
