--- a/README
+++ b/README
@@ -6,8 +6,9 @@ libelemental is a C++ data library providing gElemental's data, and is installed
 with the main program. pyElemental is a Python binding for libelemental, and is
 available as a separate package.
 
-For more information, see <http://www.kdau.com/projects/gelemental/>.
+For more information, see <https://github.com/ginggs/gelemental>.
 
+Copyright (C) 2016-2019 Graham Inggs <ginggs@riseup.net>.
 Copyright (C) 2006-2007 Kevin Daughtridge <kevin@kdau.com>.
 
 Chemical data are largely derived from the Blue Obelisk Data Repository
