--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,13 @@
 gElemental NEWS
 ===============
 
+Version 2.0.0 [stable]
+----------------------
+
+This release of gElemental relects the transfer to a new maintainer.
+It includes several bugfixes from the Debichem Team, some minor interface
+improvements, and the addition of new element names.
+
 Version 1.2.0 [stable]
 ----------------------
 
